--- a/index1.htm
+++ b/index1.htm
@@ -29,8 +29,8 @@
                   </li>
                 </ul>
                 <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn " style="background-color: #f5a70a;" type="submit">Search</button>
+<!--                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
+                  <a class="btn " style="background-color: #f5a70a;" type="submit" href="Login and Registration.html">Login</a>
                 </form>
               </div>
             </div>
