--- a/index1.htm
+++ b/index1.htm
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="styles.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+                <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     </head>
     <body>
@@ -89,5 +91,14 @@
         </div>
            
            
+<script>
+  // Initialize Bootstrap components when the document is ready
+  $(document).ready(function () {
+      // Enable Bootstrap Navbar Toggle
+      $('.navbar-toggler').click(function () {
+          $('.navbar-collapse').toggleClass('show');
+      });
+  });
+</script>
         </body>
 </html>
