--- a/tony_blog.html
+++ b/tony_blog.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles_myblog.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <link rel="stylesheet" href="styles.css">
     <script type="text/javascript" src="script.js"></script>
@@ -170,6 +171,15 @@
           © 2023, FeeltheFeeling.com</div>
       </div>
 </div>
-
+    
+<script>
+  // Initialize Bootstrap components when the document is ready
+  $(document).ready(function () {
+      // Enable Bootstrap Navbar Toggle
+      $('.navbar-toggler').click(function () {
+          $('.navbar-collapse').toggleClass('show');
+      });
+  });
+</script>
 </body>
 </html>
