--- a/vivek_blog.html
+++ b/vivek_blog.html
@@ -7,60 +7,20 @@
     <link rel="stylesheet" href="styles2.css">
     <link rel="stylesheet" href="styles3.css">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk9QD2b3cLl2Bp5vqzRMvd5q8SY4C6p8dqkzhD6PQ" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-<<<<<<< HEAD
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
 </head>
-=======
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
-    </head>
-    <body>
-        <div>   
-            <nav class="navbar fixed-top navbar-expand-lg navbar-light " style="background-color: bisque;">
-               <div class="container-fluid">
-                 <a class="navbar-brand" href="#tab1"><img src="logo4.1.png"></a>
-                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                   <span class="navbar-toggler-icon"></span>
-                 </button>
-                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                     <li class="nav-item">
-                       <a class="nav-link active" aria-current="page" href="index1.htm">Home</a>
-                     </li>
-                     <li class="nav-item">
-                       <a class="nav-link active" href="index1.htm">Blogs</a>
-                     </li>
-                     <li class="nav-item">
-                       <a class="nav-link active" href="#tab3">About</a>
-                     </li>
-                   </ul>
-                   <form class="d-flex">
-                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                     <button class="btn " style="background-color: #f5a70a;" type="submit">Search</button>
-                   </form>
-                 </div>
-               </div>
-             </nav> 
-           </div>
-          <br><br>
-          <div id="textar"  class="container1 container-fluid align-content-center "style="padding-left: 0px; padding-right: 0px;" >
-            <img id="imgart1" class="img-fluid img-responsive" style="align-content: flex-end; max-width: 80%" src="cory-GpK9rIM2EIA-unsplash.jpg"><br><br>
-            <p><h1>Things people with anxiety want you to know</h1><br>
->>>>>>> 04474b5d8c495b092f8165a8df84f2ac42f82e08
 
 <body>
     <div>
         <nav class="navbar fixed-top navbar-expand-lg navbar-light " style="background-color: bisque;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#tab1"><img src="logo4.1.png"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
@@ -224,9 +184,7 @@
     </div>
 </body>
 
-<<<<<<< HEAD
-=======
-          <!-- <br>
+          <br>
           <div class="container-fluid" style="padding: 0%;">
               <footer class="text-center text-lg-start" style="background-color: #ffc34d;">
                 <div class="container d-flex justify-content-center py-5">
@@ -249,18 +207,7 @@
                 </div>
               </footer>
             </div>
-           -->
-
         
-<script>
-  // Initialize Bootstrap components when the document is ready
-  $(document).ready(function () {
-      // Enable Bootstrap Navbar Toggle
-      $('.navbar-toggler').click(function () {
-          $('.navbar-collapse').toggleClass('show');
-      });
-  });
-</script>
+
         </body>
->>>>>>> 04474b5d8c495b092f8165a8df84f2ac42f82e08
 </html>
