--- a/vivek_blog.html
+++ b/vivek_blog.html
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index1.htm">Home</a>
+                            <a class="nav-link active" aria-current="page" href="homepage.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="index1.htm">Blogs</a>
@@ -44,14 +44,15 @@
     <br><br>
     <div id="textar" class="container1 container-fluid align-content-center "
         style="padding-left: 0px; padding-right: 0px; border: 2px solid #f5a70a; padding: 20px;">
-        <img id="imgart1" class="img-fluid img-responsive" style="align-content: flex-end; max-width: 80%;"
-            src="cory-GpK9rIM2EIA-unsplash.jpg"><br><br>
+        <img id="imgart1" class="img-fluid img-responsive" style="align-content: flex-end; max-width: 50%;"
+            src="joshua-earle-ICE__bo2Vws-unsplash.jpg" ><br><br>
         <h1>Things people with anxiety want you to know</h1><br>
 
-        <!-- Add view count display here -->
-        <p id="viewCount" style="font-size: 20px; margin-top: 10px;"></p>
-
-        <!-- Article content -->
+        <div style="border: 2px solid #f5a70a; padding: 10px; font-size: 30px;">
+            <p id="viewCount" style="font-size: 20px; margin-top: 10px;"></p>
+        </div>
+        <br><br>
+        <div style="border: 2px solid #f5a70a">
         <p>
             One might use the word 'anxious' quite often. However, there's a massive difference between feeling nervous
             or anxious and experiencing the mental health challenges of Generalised Anxiety Disorder. Anxiety happens
@@ -145,6 +146,7 @@
             after week and month after month proving how they give in all of their energy fighting and surviving through
             the toughest of fights, that too, with his own self.
         </p>
+    </div>
     </div>
         <script>
     // Function to fetch and display the view count
