--- a/vivek_blog.html
+++ b/vivek_blog.html
@@ -27,10 +27,10 @@
                             <a class="nav-link active" aria-current="page" href="homepage.php">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="index1.htm">Blogs</a>
+                            <a class="nav-link active" href="homepage.php#tab2">Blogs</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#tab3">About</a>
+                            <a class="nav-link active" href="homepage.php#tab3">About</a>
                         </li>
                     </ul>
                     <form class="d-flex">
