--- a/homepage.htm
+++ b/homepage.htm
@@ -67,9 +67,9 @@
                         <div class="card text-black" style="background-color: #ffeecc;">
                             <img src="img1.1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary" style="background-color: #f5a70a;">Go somewhere</a>
+                                <h5 class="card-title">Embrace the Unknown: The Thrill of Adventure</h5>
+                                <p class="card-text">Adventure calls to the free spirits, the thrill-seekers, and the wanderers among us. It's a beckoning to step outside the comfort zone, to explore the uncharted territories of both the world and the self..</p>
+                                <a href="tony_blog.html" class="btn btn-primary" style="background-color: #f5a70a;">Go somewhere</a>
                              </div>
                         </div>
                     </div>
