--- a/tony_blog.html
+++ b/tony_blog.html
@@ -54,7 +54,7 @@
     <main>
 
       <div class="container-md">  
-          <img src="adventure.webp" class="img-fluid hero-img" alt="hero-image">
+          <img src="adventure.jpeg" class="img-fluid hero-img" alt="hero-image">
       </div>
  
      
